Fixed issue with StackOverflow sidebar overlapping

--- a/parser.css
+++ b/parser.css
@@ -14,13 +14,12 @@
     text-align: center;
     font-stretch: condensed;
     text-decoration: none;
-    text-transform: uppercase;
-    z-index: 999 !important;
+    z-index: 9999 !important;
   }
 
 
   .selection-tooltip-arrow {
-    z-index:999 !important;
+    z-index:9999 !important;
     width: 50px;
     height: 16px;
     overflow: hidden;
